# jarvis-sandbox

./: .gitignore  Makefile  README.md
.claude/: settings.json
.claude/hooks/base/: brain_client.py  brain_inject.py  ci_wait_after_push.sh  jarvis_autoloop.sh  jarvis_prompt_arm.sh  make_help_inject.py  trust_hook.py
.github/workflows/: ci.yml
.prompts/: AGENTS.base.md  AGENTS.personal.md  AGENTS.work.md  jarvis-state.local.md
.prompts/agents/base/: engineer_agent.md  growth_agent.md  jarvis_agent.md  ops_agent.md  pm_agent.md  ship_agent.md
.prompts/commands/base/: codebase_scan.md  create_pull_request.md  debug.md  jarvis_agent.md  jarvis_diagnose.md  merge_template.md
.prompts/skills/base/ui-ux-pro-max/: SKILL.md
docs/: CLOUD_RUN_DEPLOY.md  VERCEL_DEPLOY.md
frontend/: .gitignore  package-lock.json  package.json  playwright.ci.config.ts  playwright.config.ts  vercel.json
frontend/e2e/: tasks.spec.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/suggestions/: index.ts  suggestions-panel.tsx
frontend/src/lib/: api.ts  date-utils.ts  types.ts
scripts/base/: bws_global_run.sh  bws_run.sh
smarttodo/: .dockerignore  Dockerfile  pyproject.toml
smarttodo/src/: main.py
smarttodo/src/ai/: __init__.py  client.py  parser.py  prompts.py  suggestions.py
smarttodo/src/api/: parser.py  suggestions.py  tasks.py
smarttodo/src/models/: suggestion.py  task.py
smarttodo/src/services/: firestore.py
smarttodo/tests/: test_health.py  test_parser.py  test_suggestions.py  test_tasks.py
src/: main.py  test_main.py
(+4 files in other folders)
